--- a/packages/web-components/fast-foundation/.storybook/preview-head.html
+++ b/packages/web-components/fast-foundation/.storybook/preview-head.html
@@ -98,8 +98,10 @@
         --type-ramp-plus-6-line-height: 72px;
     }
 
-    html {
+    html,
+    .docs-story {
         background-color: var(--fill-color);
+        color: var(--neutral-foreground-rest);
         min-height: 100%;
     }
 
