run prettier against project

--- a/packages/web-components/fast-ssr/src/styles/fast-style.fixture.html
+++ b/packages/web-components/fast-ssr/src/styles/fast-style.fixture.html
@@ -122,7 +122,7 @@
         "
     >
         <script type="module" src="/fast-style.js"></script>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <!-- shadowroots must remain open for testing contained elements -->
             <template shadowroot="open">
                 <fast-style
@@ -139,7 +139,7 @@
                     box-shadow: 0 0 calc((var(--elevation) * 0.225px) + 2px) rgba(0, 0, 0, calc(0.11 * (2 - var(--background-luminance, 1)))), 0 calc(var(--elevation) * 0.4px) calc((var(--elevation) * 0.9px)) rgba(0, 0, 0, calc(0.13 * (2 - var(--background-luminance, 1))));}"
                 ></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -196,11 +196,11 @@
                 </div>
             </template>
         </fast-card>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -220,11 +220,11 @@
                 </div>
             </template>
         </fast-card>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -244,11 +244,11 @@
                 </div>
             </template>
         </fast-card>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -268,11 +268,11 @@
                 </div>
             </template>
         </fast-card>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -292,11 +292,11 @@
                 </div>
             </template>
         </fast-card>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -316,11 +316,11 @@
                 </div>
             </template>
         </fast-card>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -340,11 +340,11 @@
                 </div>
             </template>
         </fast-card>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -364,11 +364,11 @@
                 </div>
             </template>
         </fast-card>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -388,11 +388,11 @@
                 </div>
             </template>
         </fast-card>
-        <fast-card style="width: 300px;">
+        <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
-                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest);">
+                <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
