--- a/packages/web-components/fast-ssr/src/fast-command-buffer/index.fixture.html
+++ b/packages/web-components/fast-ssr/src/fast-command-buffer/index.fixture.html
@@ -123,8 +123,8 @@
         <script type="module" src="/fast-style.js"></script>
         <script type="module" src="/fast-command-buffer.js"></script>
 
-        <div style="display: flex;">
-            <fast-card style="width: 300px;">
+        <div style="display: flex">
+            <fast-card style="width: 300px">
                 <!-- shadowroots must remain open for testing contained elements -->
                 <template shadowroot="open">
                     <fast-command-buffer></fast-command-buffer>
@@ -213,7 +213,7 @@
                     </div>
                 </template>
             </fast-card>
-            <fast-card style="width: 300px;">
+            <fast-card style="width: 300px">
                 <template shadowroot="open">
                     <fast-command-buffer></fast-command-buffer>
                     <fast-style data-style-id="fast-card"></fast-style>
@@ -271,9 +271,8 @@
                 }
 
                 fakeHydrate() {
-                    var commandbuffer = this.parentNode.querySelectorAll(
-                        "fast-command-buffer"
-                    )[0];
+                    var commandbuffer =
+                        this.parentNode.querySelectorAll("fast-command-buffer")[0];
                     commandbuffer.stopRecording();
                     var elements = this.parentNode.querySelectorAll(
                         `[${FASTCommandBufferAttributeName}]`
