implement test for safari

--- a/examples/todo-app/index.html
+++ b/examples/todo-app/index.html
@@ -8,9 +8,10 @@
                 visibility: hidden;
             }
         </style>
+        <script src="www/bundle.js"></script>
     </head>
     <body>
-        <todo-app></todo-app>
-        <script src="www/bundle.js"></script>
+        <fast-anchor appearance="accent">Hello</fast-anchor>
+        <fast-anchor appearance="accent">World</fast-anchor>
     </body>
 </html>
