use local placeholder image in fast-ssr tests

--- a/packages/web-components/fast-ssr/src/fast-command-buffer/index.fixture.html
+++ b/packages/web-components/fast-ssr/src/fast-command-buffer/index.fixture.html
@@ -141,7 +141,7 @@
                     border-radius: calc(var(--control-corner-radius) * 1px);
                     box-shadow: 0 0 calc((var(--elevation) * 0.225px) + 2px) rgba(0, 0, 0, calc(0.11 * (2 - var(--background-luminance, 1)))), 0 calc(var(--elevation) * 0.4px) calc((var(--elevation) * 0.9px)) rgba(0, 0, 0, calc(0.13 * (2 - var(--background-luminance, 1))));}"
                     ></fast-style>
-                    <img src="https://via.placeholder.com/300x200/414141" />
+                    <img src="/placeholder.png" />
                     <div
                         style="
                             padding: 0 10px 10px;
@@ -217,7 +217,7 @@
                 <template shadowroot="open">
                     <fast-command-buffer></fast-command-buffer>
                     <fast-style data-style-id="fast-card"></fast-style>
-                    <img src="https://via.placeholder.com/300x200/414141" />
+                    <img src="/placeholder.png" />
                     <div
                         style="
                             padding: 0 10px 10px;
