--- a/packages/web-components/fast-ssr/src/styles/fast-style.fixture.html
+++ b/packages/web-components/fast-ssr/src/styles/fast-style.fixture.html
@@ -138,7 +138,7 @@
                     border-radius: calc(var(--control-corner-radius) * 1px);
                     box-shadow: 0 0 calc((var(--elevation) * 0.225px) + 2px) rgba(0, 0, 0, calc(0.11 * (2 - var(--background-luminance, 1)))), 0 calc(var(--elevation) * 0.4px) calc((var(--elevation) * 0.9px)) rgba(0, 0, 0, calc(0.13 * (2 - var(--background-luminance, 1))));}"
                 ></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
@@ -199,7 +199,7 @@
         <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
@@ -223,7 +223,7 @@
         <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
@@ -247,7 +247,7 @@
         <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
@@ -271,7 +271,7 @@
         <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
@@ -295,7 +295,7 @@
         <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
@@ -319,7 +319,7 @@
         <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
@@ -343,7 +343,7 @@
         <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
@@ -367,7 +367,7 @@
         <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
@@ -391,7 +391,7 @@
         <fast-card style="width: 300px">
             <template shadowroot="open">
                 <fast-style style-id="fast-card"></fast-style>
-                <img src="https://via.placeholder.com/300x200/414141" />
+                <img src="/placeholder.png" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
                     <h2>Heading</h2>
                     <p>
