--- a/packages/web-components/fast-ssr/src/styles/fast-style.fixture.html
+++ b/packages/web-components/fast-ssr/src/styles/fast-style.fixture.html
@@ -124,7 +124,7 @@
         <script type="module" src="/fast-style.js"></script>
         <fast-card style="width: 300px">
             <!-- shadowroots must remain open for testing contained elements -->
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style
                     style-id="fast-card"
                     css=":host {
@@ -149,7 +149,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style
                                 style-id="fast-button"
                                 css=":host {
@@ -197,7 +197,7 @@
             </template>
         </fast-card>
         <fast-card style="width: 300px">
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
@@ -210,7 +210,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style style-id="fast-button"></fast-style>
                             <button class="control">
                                 <span>Button</span>
@@ -221,7 +221,7 @@
             </template>
         </fast-card>
         <fast-card style="width: 300px">
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
@@ -234,7 +234,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style style-id="fast-button"></fast-style>
                             <button class="control">
                                 <span>Button</span>
@@ -245,7 +245,7 @@
             </template>
         </fast-card>
         <fast-card style="width: 300px">
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
@@ -258,7 +258,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style style-id="fast-button"></fast-style>
                             <button class="control">
                                 <span>Button</span>
@@ -269,7 +269,7 @@
             </template>
         </fast-card>
         <fast-card style="width: 300px">
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
@@ -282,7 +282,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style style-id="fast-button"></fast-style>
                             <button class="control">
                                 <span>Button</span>
@@ -293,7 +293,7 @@
             </template>
         </fast-card>
         <fast-card style="width: 300px">
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
@@ -306,7 +306,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style style-id="fast-button"></fast-style>
                             <button class="control">
                                 <span>Button</span>
@@ -317,7 +317,7 @@
             </template>
         </fast-card>
         <fast-card style="width: 300px">
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
@@ -330,7 +330,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style style-id="fast-button"></fast-style>
                             <button class="control">
                                 <span>Button</span>
@@ -341,7 +341,7 @@
             </template>
         </fast-card>
         <fast-card style="width: 300px">
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
@@ -354,7 +354,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style style-id="fast-button"></fast-style>
                             <button class="control">
                                 <span>Button</span>
@@ -365,7 +365,7 @@
             </template>
         </fast-card>
         <fast-card style="width: 300px">
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
@@ -378,7 +378,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style style-id="fast-button"></fast-style>
                             <button class="control">
                                 <span>Button</span>
@@ -389,7 +389,7 @@
             </template>
         </fast-card>
         <fast-card style="width: 300px">
-            <template shadowroot="open">
+            <template shadowrootmode="open">
                 <fast-style style-id="fast-card"></fast-style>
                 <img src="https://via.placeholder.com/300x200/414141" />
                 <div style="padding: 0 10px 10px; color: var(--neutral-foreground-rest)">
@@ -402,7 +402,7 @@
                         Suspendisse volutpat auctor diam,vel mattis lorem venenatis in.
                     </p>
                     <fast-button>
-                        <template shadowroot="open">
+                        <template shadowrootmode="open">
                             <fast-style style-id="fast-button"></fast-style>
                             <button class="control">
                                 <span>Button</span>
