--- a/packages/web-components/fast-ssr/src/fast-command-buffer/index.fixture.html
+++ b/packages/web-components/fast-ssr/src/fast-command-buffer/index.fixture.html
@@ -126,7 +126,7 @@
         <div style="display: flex">
             <fast-card style="width: 300px">
                 <!-- shadowroots must remain open for testing contained elements -->
-                <template shadowroot="open">
+                <template shadowrootmode="open">
                     <fast-command-buffer></fast-command-buffer>
                     <fast-style
                         data-style-id="fast-card"
@@ -158,7 +158,7 @@
                             venenatis in.
                         </p>
                         <fast-button>
-                            <template shadowroot="open">
+                            <template shadowrootmode="open">
                                 <fast-command-buffer></fast-command-buffer>
                                 <fast-style
                                     data-style-id="fast-button"
@@ -214,7 +214,7 @@
                 </template>
             </fast-card>
             <fast-card style="width: 300px">
-                <template shadowroot="open">
+                <template shadowrootmode="open">
                     <fast-command-buffer></fast-command-buffer>
                     <fast-style data-style-id="fast-card"></fast-style>
                     <img src="https://via.placeholder.com/300x200/414141" />
@@ -234,7 +234,7 @@
                             venenatis in.
                         </p>
                         <fast-button>
-                            <template shadowroot="open">
+                            <template shadowrootmode="open">
                                 <fast-command-buffer></fast-command-buffer>
                                 <fast-style data-style-id="fast-button"></fast-style>
                                 <button
