Add the f-template component which can interpret a text binding and convert it to a ViewTemplate

--- a/packages/web-components/fast-btr/src/fixtures/binding.fixture.html
+++ b/packages/web-components/fast-btr/src/fixtures/binding.fixture.html
@@ -6,14 +6,11 @@
     </head>
     <body>
         <custom-element text="Hello world">
-            <template shadowrootmode="open">
-                Hello world
-            </template>
+            <template shadowrootmode="open">Hello world</template>
         </custom-element>
         <f-template name="custom-element">
-            <template>
-                {{text}}
-            </template>
+            <template>{{text}}</template>
         </f-template>
+        <script type="module" src="/main.js"></script>
     </body>
 </html>
