--- a/packages/web-components/fast-btr/src/fixtures/binding/binding.fixture.html
+++ b/packages/web-components/fast-btr/src/fixtures/binding/binding.fixture.html
@@ -5,10 +5,10 @@
         <title></title>
     </head>
     <body>
-        <custom-element text="Hello world">
+        <test-element text="Hello world">
             <template shadowrootmode="open">Hello world</template>
-        </custom-element>
-        <f-template name="custom-element">
+        </test-element>
+        <f-template name="test-element">
             <template>{{text}}</template>
         </f-template>
         <script type="module" src="/binding/main.js"></script>
