Update testing structure to accommodate future Rust script and additional test scenarios (#7074)
<!---
Thanks for filing a pull request 😄 ! Before you submit, please read the following:

Search open/closed issues before submitting. Someone may have pushed the same thing before!

Provide a summary of your changes in the title field above.
-->

# Pull Request

## 📖 Description

This change moves the logic of the fixtures into folders and allows for individual testing scenarios that will help accommodate the future Rust script. An explanation is in the fixtures README.md.

## ✅ Checklist

### General

<!--- Review the list and put an x in the boxes that apply. -->

- [ ] I have included a change request file using `$ npm run change`
- [ ] I have added tests for my changes.
- [x] I have tested my changes.
- [x] I have updated the project documentation to reflect my changes.
- [x] I have read the [CONTRIBUTING](https://github.com/microsoft/fast/blob/main/CONTRIBUTING.md) documentation and followed the [standards](https://github.com/microsoft/fast/blob/main/CODE_OF_CONDUCT.md#our-standards) for this project.

--- a/packages/web-components/fast-btr/src/fixtures/binding/binding.fixture.html
+++ b/packages/web-components/fast-btr/src/fixtures/binding/binding.fixture.html
@@ -5,12 +5,12 @@
         <title></title>
     </head>
     <body>
-        <custom-element text="Hello world">
+        <test-element text="Hello world">
             <template shadowrootmode="open">Hello world</template>
-        </custom-element>
-        <f-template name="custom-element">
+        </test-element>
+        <f-template name="test-element">
             <template>{{text}}</template>
         </f-template>
-        <script type="module" src="/main.js"></script>
+        <script type="module" src="/binding/main.js"></script>
     </body>
 </html>
