--- a/packages/web-components/fast-html/src/fixtures/event/event.html
+++ b/packages/web-components/fast-html/src/fixtures/event/event.html
@@ -1,1 +1,3 @@
-<button @click="{{handleClick()}}"></button>
+<button @click="{{handleNoArgsClick()}}"></button>
+<button @click="{{handleEventArgClick(e)}}"></button>
+<button @click="{{handleAttributeArgClick(foo)}}"></button>
