Change client only bindings to single curly braces and categorize single, double, and tripe curly brace bindings

--- a/packages/web-components/fast-html/src/fixtures/event/event.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/event/event.fixture.html
@@ -14,9 +14,9 @@
         </test-element>
         <f-template name="test-element">
             <template>
-                <button @click="{{handleNoArgsClick()}}">No arguments</button>
-                <button @click="{{handleEventArgClick(e)}}">event argument</button>
-                <button @click="{{handleAttributeArgClick(foo)}}">attribute argument</button>
+                <button @click="{handleNoArgsClick()}">No arguments</button>
+                <button @click="{handleEventArgClick(e)}">event argument</button>
+                <button @click="{handleAttributeArgClick(foo)}">attribute argument</button>
             </template>
         </f-template>
         <script type="module" src="/event/main.js"></script>
