--- a/packages/web-components/fast-html/src/fixtures/slotted/slotted.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/slotted/slotted.fixture.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <f-template name="test-element">
-            <template><slot f-slotted="{{slottedNodes}}"></slot></template>
+            <template><slot f-slotted="{slottedNodes}"></slot></template>
         </f-template>
         <test-element>
             <template shadowrootmode="open"><slot></slot></template>
