--- a/packages/web-components/fast-html/src/fixtures/children/children.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/children/children.fixture.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <f-template name="test-element">
-            <template><ul f-children="{{listItems}}"><f-repeat value="{{item in list}}"><li>{{item}}</li></f-repeat></ul></template>
+            <template><ul f-children="{listItems}"><f-repeat value="{{item in list}}"><li>{{item}}</li></f-repeat></ul></template>
         </f-template>
         <test-element>
             <template shadowrootmode="open"><ul><li>Foo</li><li>Bar</li></ul></template>
