--- a/packages/web-components/fast-html/src/fixtures/children/children.html
+++ b/packages/web-components/fast-html/src/fixtures/children/children.html
@@ -1,1 +1,1 @@
-<ul f-children="{{listItems}}"><f-repeat value="{{item in list}}"><li>{{item}}</li></f-repeat></ul>
+<ul f-children="{listItems}"><f-repeat value="{{item in list}}"><li>{{item}}</li></f-repeat></ul>
