--- a/packages/web-components/fast-html/src/fixtures/ref/ref.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/ref/ref.fixture.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <f-template name="test-element">
-            <template><video f-ref="{{video}}"></video></template>
+            <template><video f-ref="{video}"></video></template>
         </f-template>
         <test-element>
             <template shadowrootmode="open"><video></video></template>
