fix: event handler binding

--- a/packages/web-components/fast-html/src/fixtures/event/event.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/event/event.fixture.html
@@ -17,6 +17,7 @@
                 <button @click="{handleNoArgsClick()}">No arguments</button>
                 <button @click="{handleEventArgClick(e)}">event argument</button>
                 <button @click="{handleAttributeArgClick(foo)}">attribute argument</button>
+                <button @click="{handleModifyAttributeClick()}">modify foo</button>
             </template>
         </f-template>
         <script type="module" src="/event/main.js"></script>
