--- a/packages/web-components/fast-html/src/fixtures/dot-syntax/dot-syntax.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/dot-syntax/dot-syntax.fixture.html
@@ -10,7 +10,7 @@
             <template>{{object.foo}}</template>
         </f-template>
         <test-element>
-            <template shadowrootmode="open">bar</template>
+            <template shadowrootmode="open"><!--fe-b$$start$$0$$t01oHhokPY$$fe-b-->bar<!--fe-b$$end$$0$$t01oHhokPY$$fe-b--></template>
         </test-element>
     </body>
 </html>
