--- a/packages/web-components/fast-html/src/fixtures/event/event.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/event/event.fixture.html
@@ -7,9 +7,10 @@
     <body>
         <test-element foo="bar">
             <template shadowrootmode="open">
-                <button>No arguments</button>
-                <button>event argument</button>
-                <button>attribute argument</button>
+                <button data-fe-b-0>No arguments</button>
+                <button data-fe-b-1>event argument</button>
+                <button data-fe-b-2>attribute argument</button>
+                <button data-fe-b-3>modify foo</button>
             </template>
         </test-element>
         <f-template name="test-element">
