--- a/packages/web-components/fast-html/src/fixtures/ref/ref.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/ref/ref.fixture.html
@@ -10,7 +10,7 @@
             <template><video f-ref="{video}"></video></template>
         </f-template>
         <test-element>
-            <template shadowrootmode="open"><video></video></template>
+            <template shadowrootmode="open"><video data-fe-b-0></video></template>
         </test-element>
     </body>
 </html>
