--- a/packages/web-components/fast-html/src/fixtures/repeat/repeat.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/repeat/repeat.fixture.html
@@ -21,12 +21,29 @@
             </template>
         </f-template>
         <test-element>
-            <template shadowrootmode="open"><ul><li>Foo - Bat</li><li>Bar - Bat</li></ul></template>
+            <template shadowrootmode="open">
+                <ul>
+                    <!--fe-b$$start$$0$$EVAQBRnUUH$$fe-b-->
+                    <!--fe-repeat$$start$$0$$fe-repeat-->
+                    <li><!--fe-b$$start$$0$$vEbKKUHmwU$$fe-b-->Foo<!--fe-b$$end$$0$$vEbKKUHmwU$$fe-b--> - <!--fe-b$$start$$1$$vEbKKUHmwU$$fe-b-->Bat<!--fe-b$$end$$1$$vEbKKUHmwU$$fe-b--></li>
+                    <!--fe-repeat$$end$$0$$fe-repeat-->
+                    <!--fe-repeat$$start$$1$$fe-repeat-->
+                    <li><!--fe-b$$start$$0$$vEbKKUHmwU$$fe-b-->Bar<!--fe-b$$end$$0$$vEbKKUHmwU$$fe-b--> - <!--fe-b$$start$$1$$vEbKKUHmwU$$fe-b-->Bat<!--fe-b$$end$$1$$vEbKKUHmwU$$fe-b--></li>
+                    <!--fe-repeat$$end$$1$$fe-repeat-->
+                    <!--fe-b$$end$$0$$EVAQBRnUUH$$fe-b-->
+                </ul>
+            </template>
         </test-element>
         <test-element-inner-when>
             <template shadowrootmode="open">
                 <ul>
-                    <li>Foo</li>
+                    <!--fe-b$$start$$0$$EVAQBRnUUH$$fe-b-->
+                    <!--fe-repeat$$start$$0$$fe-repeat-->
+                    <!--fe-b$$start$$0$$BJtvnvqlxr$$fe-b-->
+                    <li><!--fe-b$$start$$0$$vEbKKUHmwU$$fe-b-->Foo<!--fe-b$$end$$0$$vEbKKUHmwU$$fe-b--></li>
+                    <!--fe-b$$end$$0$$BJtvnvqlxr$$fe-b-->
+                    <!--fe-repeat$$end$$0$$fe-repeat-->
+                    <!--fe-b$$end$$0$$EVAQBRnUUH$$fe-b-->
                 </ul>
             </template>
         </test-element-inner-when>
