--- a/packages/web-components/fast-html/src/fixtures/slotted/slotted.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/slotted/slotted.fixture.html
@@ -10,7 +10,7 @@
             <template><slot f-slotted="{slottedNodes}"></slot></template>
         </f-template>
         <test-element>
-            <template shadowrootmode="open"><slot></slot></template>
+            <template shadowrootmode="open"><slot data-fe-b-0></slot></template>
             <ul><li>Foo</li><li>Bar</li></ul>
         </test-element>
     </body>
