--- a/packages/web-components/fast-html/src/fixtures/repeat/repeat.html
+++ b/packages/web-components/fast-html/src/fixtures/repeat/repeat.html
@@ -1,1 +1,1 @@
-<ul><f-repeat value="{{item in list}}"><li>{{item}} - {{../parent}}</li></f-repeat></ul>
+<ul><f-repeat value="{{item in list}}"><li>{{item}} - {{item_parent}}</li></f-repeat></ul>
