--- a/packages/web-components/fast-html/src/fixtures/repeat/repeat.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/repeat/repeat.fixture.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <f-template name="test-element">
-            <template><ul><f-repeat value="{{item in list}}"><li>{{item}} - {{../parent}}</li></f-repeat></ul></template>
+            <template><ul><f-repeat value="{{item in list}}"><li>{{item}} - {{item_parent}}</li></f-repeat></ul></template>
         </f-template>
         <f-template name="test-element-inner-when">
             <template>
