fix: when an array is reduced to 0 items the observation should still kick in when array items are added

--- a/packages/web-components/fast-html/src/fixtures/observer-map/observer-map.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/observer-map/observer-map.fixture.html
@@ -140,6 +140,18 @@
                     </f-when>
                     <button @click="{defineY()}">Define Y</button>
                     <button @click="{updateZ()}">Update Z</button>
+                    <div>
+                        <f-repeat value="{{group in groups}}">
+                            <f-repeat value="{{item in group.items}}">
+                                <div class="item">{{item.text}}</div>
+                            </f-repeat>
+                        </f-repeat>
+                    </div>
+                    <button @click="{removeAllItems()}">Remove all items</button>
+                    <button @click="{addAnItem()}">Add an item</button>
+                    <button @click="{updateAnItem()}">Update an item</button>
+                    <button @click="{removeGroup()}">Remove groups</button>
+                    <button @click="{addGroup()}">Add group</button>
                 </template>
             </f-template>
         </div>
