fix: delegate attribute handling to HydratableElementController

--- a/packages/web-components/fast-html/src/fixtures/dot-syntax/dot-syntax.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/dot-syntax/dot-syntax.fixture.html
@@ -21,9 +21,9 @@
                 <span><!--fe-b$$start$$0$$t01oHhokPY$$fe-b-->bar<!--fe-b$$end$$0$$t01oHhokPY$$fe-b--></span>
                 <span><!--fe-b$$start$$1$$t01oHhokPY$$fe-b--><!--fe-b$$end$$1$$t01oHhokPY$$fe-b--></span>
                 <span><!--fe-b$$start$$2$$t01oHhokPY$$fe-b--><!--fe-b$$end$$2$$t01oHhokPY$$fe-b--></span>
-                <button>Set b</button>
-                <button>Set a.b1</button>
-                <button>Set a.b2.c</button>
+                <button data-fe-b-3>Set b</button>
+                <button data-fe-b-4>Set a.b1</button>
+                <button data-fe-b-5>Set a.b2.c</button>
             </template>
         </test-element>
     </body>
