feat: add deepMerge and deepEquals helper functions

--- a/packages/web-components/fast-html/test/index.html
+++ b/packages/web-components/fast-html/test/index.html
@@ -12,6 +12,7 @@
         <li><a href="/fixtures/attribute/">attribute</a></li>
         <li><a href="/fixtures/binding/">binding</a></li>
         <li><a href="/fixtures/children/">children</a></li>
+        <li><a href="/fixtures/deep-merge/">deep-merge</a></li>
         <li><a href="/fixtures/dot-syntax/">dot-syntax</a></li>
         <li><a href="/fixtures/event/">event</a></li>
         <li><a href="/fixtures/lifecycle-callbacks/">lifecycle-callbacks</a></li>
